--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     <h2> </h2>
     <a href="https://www.youtube.com/watch?v=TIYDhAoldmI&ab_channel=%E9%8B%BC%E5%B0%BE">勒索病毒(模仿國外的人做的)</a><br />
     <iframe width="1000" height="500" src="https://www.youtube.com/embed/TIYDhAoldmI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <script data-ad-client="ca-pub-6324696437745812" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    
+    <h2> </h2>
+    <a href="https://www.youtube.com/watch?v=hVoV56P14sk&ab_channel=%E9%8B%BC%E5%B0%BE">惡搞戀愛遊戲</a><br />
+    <iframe width="1000" height="500" src="https://www.youtube.com/embed/hVoV56P14sk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-    <h1>更新中請稍後...</h1>
 </body>
 </html>
