--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="utf-8"></meta>
     <title>steeltail home</title>
+    <script type="text/javascript">
+    alert("歡迎來到我的網站");
+    
+
+
+
+    </script>
 </head>
 <body>
     <img src="steeltail.jpg" />
@@ -22,7 +29,7 @@
     <h2> </h2>
     <a href="https://www.youtube.com/watch?v=hVoV56P14sk&ab_channel=%E9%8B%BC%E5%B0%BE">惡搞戀愛遊戲</a><br />
     <iframe width="1000" height="500" src="https://www.youtube.com/embed/hVoV56P14sk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	<h2>ok我網站目前有點bug...</h2>
+	
 	
 	
 </body>
