--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <a href="https://www.youtube.com/watch?v=hVoV56P14sk&ab_channel=%E9%8B%BC%E5%B0%BE">惡搞戀愛遊戲</a><br />
     <iframe width="1000" height="500" src="https://www.youtube.com/embed/hVoV56P14sk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
+	<h2> </h2>
+	<a href="https://www.youtube.com/watch?v=p0vdJzHQqmM&ab_channel=%E9%8B%BC%E5%B0%BE">智商測驗遊戲</a><br />
+	<iframe width="1000" height="500" src="https://www.youtube.com/embed/p0vdJzHQqmM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
 	
 </body>
