--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<h2> </h2>
 	<a href="https://www.youtube.com/watch?v=p0vdJzHQqmM&ab_channel=%E9%8B%BC%E5%B0%BE">智商測驗遊戲</a><br />
 	<iframe width="1000" height="500" src="https://www.youtube.com/embed/p0vdJzHQqmM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	<a href="D:\c語言\brainn.exe">點我下載brain game</a>
+	<a href="briann://">點我下載brain game</a>
 	
 </body>
 </html>
